tests/cases/fail/missing_return_path.u
import sti.

uint32 f(uint32 x) {
  if (x > 0u) 1u!
}

-> main() {
  sti<->print(0u).
}
